update optimizations